--- a/common/app/assets/stylesheets/module/football/_tables.scss
+++ b/common/app/assets/stylesheets/module/football/_tables.scss
@@ -68,7 +68,7 @@
     font-weight: 500;
 }
 
-@media (min-width: 40.0625em) {
+@media (min-width: 40.0625*16em) {
 
     .table-football th,
     .table-football td {
